Desplazamiento por con el navegador

--- a/index.html
+++ b/index.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Porfolio</title>
-	<link rel="stylesheet" type="text/css" href="./assets/style.css">
-</head>	
-<body>
-	
 
-	<script type="text/javascript" src="./assets/script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Porfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+<body>
+    <header class="header">
+        <div class="header__logo">
+            <p>Rafael</p>
+        </div>
+        <div class="header__container--nav">
+            <ul>
+                <li tabindex="0" id="nav-home"> Home</label></li>
+                <li tabindex="0" id="nav-work">Trabajos</label></li>
+                <li tabindex="0" id="nav-contact">Contacto</label></li>
+            </ul>
+        </div>
+    </header>
+    <section class="info" id="home">
+        <h1 class="info__title">Hola</h1>
+        <div class="info__container--text">
+            <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. </p>
+        </div>
+    </section>
+    <section class="works" id="work">
+        <div class="work__container">
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+            <div class="work-card__container">
+                <img src="" alt="">
+                <h3 class="work-card__title"></h3>
+                <p class="work-card__description"></p>
+                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+            </div>
+        </div>
+    </section>
+    <script type="text/javascript" src="./assets/script.js"></script>
 </body>
+
 </html>
