--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
     <meta charset="UTF-8">
     <title>Porfolio</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!--<script src="https://kit.fontawesome.com/a076d05399.js"></script>-->
 </head>
 
 <body>
     <header class="header">
         <div class="header__logo">
-            <p>Rafael</p>
+            <p>RL</p>
         </div>
         <div class="header__container--nav">
             <ul>
-                <li tabindex="0" id="nav-home"> Home</label></li>
+                <li tabindex="0" id="nav-info"> Home</label></li>
                 <li tabindex="0" id="nav-work">Trabajos</label></li>
                 <li tabindex="0" id="nav-contact">Contacto</label></li>
             </ul>
         </div>
     </header>
-    <section class="info" id="home">
-        <h1 class="info__title">Hola</h1>
-        <div class="info__container--text">
-            <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. </p>
+    <section class="info" id="info">
+        <div class="info__container">
+            <div class="info__container--text">
+                <h3 class="info__title">Hola</h3>
+                <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro placeat tenetur nihil. Facere accusantium voluptatibus, ex odio dolore, id voluptates ut incidunt doloribus iusto alias commodi, blanditiis explicabo cum distinctio. </p>
+            </div>
         </div>
     </section>
-    <section class="works" id="work">
+    <section class="work" id="work">
         <div class="work__container">
             <div class="work-card__container">
                 <img src="" alt="">
@@ -85,6 +87,8 @@
             </div>
         </div>
     </section>
+    <footer>
+    </footer>
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
 
