--- a/index.html
+++ b/index.html
@@ -24,70 +24,71 @@
     <section class="info" id="info">
         <div class="info__container">
             <div class="info__container--text">
-                <h3 class="info__title">Hola</h3>
-                <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro placeat tenetur nihil. Facere accusantium voluptatibus, ex odio dolore, id voluptates ut incidunt doloribus iusto alias commodi, blanditiis explicabo cum distinctio. </p>
-            </div>
-        </div>
+                <h2 class="info__title">Hola</h3>
+                    <div class="info__context">
+                        <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro placeat tenetur nihil. Facere accusantium voluptatibus, ex odio dolore, id voluptates ut incidunt doloribus iusto alias commodi, blanditiis explicabo cum distinctio. </p>
+                    </div>
     </section>
     <section class="work" id="work">
         <div class="work__container">
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
             <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
+                <img src="./assets/imagen/" alt="">
+                <h3 class="work-card__title">Clon de Google</h3>
                 <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
-            </div>
-            <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
-            </div>
-            <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
-            </div>
-            <div class="work-card__container">
-                <img src="" alt="">
-                <h3 class="work-card__title"></h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><span><i class="fab fa-github"></i></span></a></div>
+                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
             </div>
         </div>
     </section>
-    <footer>
+    <section class="contact" id="contact">
+        <div class="contact__container">
+            <div class="contact__container--form">
+                <label for="name">Nombre</label>
+                <input type="text" id="name">
+                <label for="email">Email</label>
+                <input type="text" id="email">
+                <label for="mesaje">Mensaje</label>
+                <textarea name="mesaje" id="mesaje" cols="30" rows="10"></textarea>
+            </div>
+            <div class="contact__container--contact">
+                <h2>Contactos</h2>
+                <p>Email: r.livise@hotmail.com</p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <p>Derechos Reservados</p>
+        </div>
     </footer>
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
