font-size and margins

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Porfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Signika:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <!--<script src="https://kit.fontawesome.com/a076d05399.js"></script>-->
+    <meta name="viewport" content="width=device-width, inicial_scale=1 ">
 </head>
 
 <body>
     <header class="header">
-        <div class="header__logo">
-            <p>RL</p>
-        </div>
+        <figure class="header__logo">
+            <p>R-Livise</p>
+        </figure>
         <div class="header__container--nav">
             <ul>
                 <li tabindex="0" id="nav-info"> Home</label></li>
@@ -26,46 +28,83 @@
             <div class="info__container--text">
                 <h2 class="info__title">Hola</h3>
                     <div class="info__context">
-                        <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro placeat tenetur nihil. Facere accusantium voluptatibus, ex odio dolore, id voluptates ut incidunt doloribus iusto alias commodi, blanditiis explicabo cum distinctio. </p>
+                        <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate.</p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. </p>
                     </div>
     </section>
     <section class="work" id="work">
         <div class="work__container">
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description">asdasdads</p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/imagen/" alt="">
-                <h3 class="work-card__title">Clon de Google</h3>
-                <p class="work-card__description"></p>
-                <div class="work-card__buton"><a href=""><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
+            </div>
+            <div class="work-card__container">
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
+            </div>
+            <div class="work-card__container">
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
+            </div>
+            <div class="work-card__container">
+                <img src="./assets/imagen/project01.png" alt="">
+                <div class="work-card__detail">
+                    <h3 class="work-card__title">Clon de Google</h3>
+                    <p class="work-card__description"></p>
+                    <div class="work-card__buton"><a href="https://github.com/R-Livise/googleClon"><img src="https://img.icons8.com/ios-filled/50/000000/github-2.png" /></a></div>
+                </div>
             </div>
         </div>
     </section>
@@ -87,7 +126,7 @@
     </section>
     <footer class="footer">
         <div class="footer__container">
-            <p>Derechos Reservados</p>
+            <p>Rafael Livise Larico @ 2020</p>
         </div>
     </footer>
     <script type="text/javascript" src="./assets/script.js"></script>
