--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <span class="header__menu" id="menu"><i class="icon-menu"></i></span>
         <figure class="header__logo">
             <p>R-Livise</p>
