--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <div class="info__container--text">
                 <h2 class="info__title">Hola</h3>
                     <div class="info__context">
-                        <p>Hola soy Rafael Livise, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, a. Illo tempore perspiciatis qui odit autem, ad et incidunt omnis maxime quam facere quod, labore ipsam delectus ducimus, fugit voluptate.</p>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, obcaecati praesentium labore ab quia maiores voluptatibus, quibusdam, eius quaerat saepe est! Doloremque beatae consectetur rem pariatur a omnis quis porro. </p>
+                        <p>Hola soy Rafael Livise, programador con mas de 3 años de experiencia en tegnologias web, estoy en constante aprendizaje mediante documentacion y cursos en linea. </p>
+                        <p> He participado en concursos de progamanción con mis conpañeros en la carrera de Ingenieria de Sitemas (<a href="https://utpsedearequipa.edu.pe/noticias/alumnos-utp-destacan-en-hackathon-de-oracle-apex-a-nivel-latinoamerica">APEX</a>) , como  actualmente soy como freelance.</p>
+                        <p> Esta pagina hecha en JS vanilla concentra mis practicas, las cuales ire actualizando. </p>
                     </div>
     </section>
     <section class="work" id="work">
@@ -36,7 +37,7 @@
                 <img src="./assets/images/project01.png" alt="">
                 <div class="work-card__detail">
                     <h3 class="work-card__title">Clon de Google</h3>
-                    <p class="work-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui provident debitis laboriosam assumenda ipsa dolorum commodi, deleniti velit nisi hic, exercitationem ex officiis laudantium nobis aperiam itaque, voluptatum reiciendis explicabo!</p>
+                    <p class="work-card__description">Ejemplo de clonacion de la vista principal de GOOGLE</p>
                     <div class="work-card__buttons">
                         <div><a href="https://github.com/R-Livise/googleClon"><span><i class="icon-github"></i></span></a></div>
                         <div><a href="https://r-livise.github.io/googleClon/"><span><i class="icon-internet"></i></span></a></div>
@@ -44,13 +45,13 @@
                 </div>
             </div>
             <div class="work-card__container">
-                <img src="./assets/images/project01.png" alt="">
+                <img src="./assets/images/project02.png" alt="">
                 <div class="work-card__detail">
-                    <h3 class="work-card__title">Clon de Google</h3>
-                    <p class="work-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui provident debitis laboriosam assumenda ipsa dolorum commodi, deleniti velit nisi hic, exercitationem ex officiis laudantium nobis aperiam itaque, voluptatum reiciendis explicabo!</p>
+                    <h3 class="work-card__title">SPA Cientifico</h3>
+                    <p class="work-card__description">Ejemplo de consumo de una api publica con vanilla JS</p>
                     <div class="work-card__buttons">
-                        <div><a href="https://github.com/R-Livise/googleClon"><span><i class="icon-github"></i></span></a></div>
-                        <div><a href="https://github.com/R-Livise/googleClon"><span><i class="icon-internet"></i></span></a></div>
+                        <div><a href="https://github.com/R-Livise/SPA-Cientifico"><span><i class="icon-github"></i></span></a></div>
+                        <div><a href="https://r-livise.github.io/SPA-Cientifico/"><span><i class="icon-internet"></i></span></a></div>
                     </div>
                 </div>
             </div>
@@ -72,7 +73,7 @@
             <div class="contact__container--form">
                 <label for="email">Enviame tu correo para contactarnos.</label>
                 <input type="text" id="email">
-                <button type="sumbit">Enviar</button>
+                <button type="sumbit" class="contact__button">Enviar</button>
             </div>
             <div class="contact__container--contact">
                 <a href="" class="social-link "><span><i class="icon-face"></i></span></a>
